# rust-examples

./: .gitignore  README.md
args/: Cargo.toml
args-1/: Cargo.toml
args-1/src/: main.rs
args-2/: Cargo.toml
args-2/src/: main.rs
args/src/: main.rs
arrays/: Cargo.toml
arrays/src/: main.rs
bitwise/: Cargo.toml
bitwise/src/: main.rs
bytes/: Cargo.toml
bytes/src/: main.rs
cli-clap/: Cargo.toml
cli-clap/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
concurrency/: Cargo.toml
concurrency-basic-threads/: Cargo.toml
concurrency-futures-1/: Cargo.toml
concurrency-futures-1/src/: main.rs
concurrency-futures-2/: Cargo.toml
concurrency-futures-2/src/: main.rs
concurrency-threads-1/: Cargo.toml
concurrency-threads-2/: Cargo.toml
concurrency-threads-2/src/: main.rs
concurrency-tokio-1/: Cargo.toml
concurrency-tokio-1/src/: main.rs
concurrency-tokio-2/: Cargo.toml
concurrency-tokio-2/src/: main.rs
concurrency-tokio-3/: Cargo.toml
concurrency-tokio-3/src/: main.rs
concurrency-tokio-4/: Cargo.toml
concurrency-tokio-4/src/: main.rs
concurrency-tokio-5/: Cargo.toml
concurrency-tokio-5/src/: main.rs
concurrency-tokio-6/: Cargo.toml
concurrency-tokio-6/src/: main.rs
concurrency-tokio-7/: Cargo.toml
concurrency-tokio-7/src/: main.rs
concurrency/src/: main.rs
dns-lookups/: Cargo.toml
dns-lookups-1/: Cargo.toml
dns-lookups-1/src/: main.rs
dns-lookups-2/: Cargo.toml
dns-lookups-2/src/: main.rs
dns-lookups/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
envs/: Cargo.toml
envs/src/: main.rs
error_handling/: Cargo.toml
error_handling-1/: Cargo.toml
error_handling-2/: Cargo.toml
error_handling-2/src/: main.rs
error_handling/src/: main.rs
exec-cmds/: Cargo.toml
exec-cmds/src/: main.rs
find-replace/: Cargo.toml
find-replace/src/: main.rs
for-loops/: Cargo.toml
for-loops/src/: main.rs
functions-1/src/: main.rs
functions-2/: Cargo.toml
functions-2/src/: main.rs
functions-3/: Cargo.toml
functions-3/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
graphics/: Cargo.toml
graphics/src/: main.rs
hashmaps/: Cargo.toml
hashmaps/src/: main.rs
http-requests/: Cargo.toml
http-requests/src/: main.rs
http-scraper/: Cargo.toml
http-scraper/src/: main.rs
implementations/: Cargo.toml
implementations-2/: Cargo.toml
implementations-2/src/: main.rs
implementations/src/: main.rs
json/: Cargo.toml
json/src/: main.rs
loop-loops/: Cargo.toml
loop-loops/src/: main.rs
modules/: Cargo.toml
modules/src/: lib.rs  main.rs
net-ip/: Cargo.toml
net-ip/src/: main.rs
netlink-links-ls/: Cargo.toml
netlink-links-ls/src/: main.rs
option-some/: Cargo.toml
option-some/src/: main.rs
references/: Cargo.toml
references/src/: main.rs
sockets-connect/: Cargo.toml
sockets-connect/src/: main.rs
state-machine/: Cargo.toml
state-machine/src/: main.rs
std-async-1/: Cargo.toml
std-async-1/src/: main.rs
std-async-2/: Cargo.toml
std-async-2/src/: main.rs
strings/: Cargo.toml
strings-split/: Cargo.toml
structs/: Cargo.toml
switch-match/: Cargo.toml
testing/: Cargo.toml
traits/: Cargo.toml
traits-1/: Cargo.toml
twitter-stream/: Cargo.toml
twitter-stream/src/: main.rs
variables/: Cargo.toml
vectors/: Cargo.toml
while-loops/: Cargo.toml
yaml/: Cargo.toml  config.yml
(+11 files in other folders)
