[package]
name = "concurrency-tokio-4"
version = "0.1.0"
authors = ["Brent Salisbury <brent.salisbury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "0.2", features = ["full"] }
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
futures = {version = "0.3", features=["compat"]}
tokio = { version = "0.2", features = ["full"] }
clap = "2.33"
prost-types = "0.5"
tokio-util = { version = "0.2", features = ["codec"] }