[package]
name = "concurrency-tokio-5"
version = "0.1.0"
authors = ["Brent Salisbury <brent.salisbury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "0.2", features = ["full"] }
futures-preview = "=0.3.0-alpha.18"
futures-core-preview = "=0.3.0-alpha.18"
futures-sink-preview = "=0.3.0-alpha.18"
futures-util-preview = { version = "=0.3.0-alpha.18", features = ["sink"] }
tokio = "=0.2.0-alpha.4"
tokio-net = { version = "=0.2.0-alpha.4", features = ["process"] }