[package]
name = "concurrency-tokio-7"
version = "0.1.0"
authors = ["Brent Salisbury <brent.salisbury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.6"
tokio-timer = "0.3.0-alpha.6"
clap = "2.33"
prost-types = "0.5"
futures = "0.3.0"