[package]
name = "http-scraper"
version = "0.1.0"
authors = ["Brent Salisbury <brent.salisbury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2" }
tokio = { version = "0.2", features = ["macros"] }
scraper = "0.11.0"
colored = "1.9.1"