[package]
name = "twitter-stream"
version = "0.1.0"
authors = ["Brent Salisbury <brent.salisbury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-stream = "0.9.0"
serde_json = "*"
serde = { version = "1.0.104", features = ["derive"] }